--- a/projects/templates/projects/projects.html
+++ b/projects/templates/projects/projects.html
@@ -6,19 +6,18 @@
         <tr>
             <th>ID</th>
             <th>Project</th>
-            <th>Positive Votes</th>
             <th>Votes</th>
-            <th>creation date</th>
+            <th></th>
+            <th></th>
         </tr>
             {% for project in projects %}
                 <tr>
-                    <td>{{ project.id }}</td>
                     <td>{{ project.title }}</td>
-                    <td>{{ project.vale_total }}</td>
                     <td>{{ project.vale_ratio }}</td>
+                    <td>{{ project.vale_total }}</td>
                     <td>{{ project.created }}</td>
-                    <td>Edit</td>
-                    <td>Delete</td>
+                    <td><a href="{% url 'update-project' project.id %}">Edit</a></td>
+                    <td><a href="{% url 'delete-project' project.id %}">Delete</a></td>
                     <td><a href="{% url 'project' project.id %}">View</a></td>
                 </tr>
             {% endfor %}
