--- a/projects/templates/projects/single-project.html
+++ b/projects/templates/projects/single-project.html
@@ -1,9 +1,12 @@
 {% extends 'main.html' %}
-
+{% load static %}
 {% block content %}
 
-<img style="max-width: 500px;" src="{{ project.featured_image.url }}" alt="">
-
+{% if project.featured_image %}
+    <img style="max-width: 500px;" src="{{ project.featured_image.url }}" alt="">
+{% else %}
+    <img style="max-width: 500px;" src="{% static 'images/default.jpg' %}" alt="">
+{% endif %}
 <h1>{{ project.title }}</h1>
 <hr>
 {% for tag in project.tags.all %}
