--- a/users/templates/users/profiles.html
+++ b/users/templates/users/profiles.html
@@ -30,7 +30,7 @@
         {% for profile in profiles %}
         <div class="column card">
           <div class="dev">
-            <a href="{% url 'profile' profile.id %}" class="card__body">
+            <a href="{% url 'user-profile' profile.id %}" class="card__body">
               <div class="dev__profile">
                   <img class="avatar avatar--md" src="{{ profile.profile_image.url }}" alt="image" />
                 <div class="dev__meta">
@@ -40,7 +40,7 @@
               </div>
               <p class="dev__info">{{profile.bio|slice:"150"}}</p>
               <div class="dev__skills">
-                {% for skill in profile.skill_set.all %}
+                {% for skill in profile.skill_set.all|slice:"5" %}
                 <span class="tag tag--pill tag--main">
                   <small>{{skill.name}}</small>
                 </span>
