criando cadastro de usuario

--- a/users/templates/users/login_register.html
+++ b/users/templates/users/login_register.html
@@ -2,11 +2,20 @@
 
 {% block content %}
 
+{% if page == 'register' %}
+
+<h1>Register User</h1>
+
+<p>Already have an account <a href="{% url 'login' %}">Sign up</a></p>
+{% else %}
 <form action="{% url 'login' %}" method="POST">
     {% csrf_token %}
     <input type="text" name="username" placeholder="Username">
     <input type="password" name="password" placeholder="Enter password">
     <input type="submit" placeholder="Login">
+
+    <p>don't have an account <a href="{% url 'register' %}">Sign up</a></p>
 </form>
+{% endif%}
 
 {% endblock content %}
