--- a/templates/main.html
+++ b/templates/main.html
@@ -21,18 +21,20 @@
     {% include 'navbar.html' %}
 
     {% if messages %}
-    <ul class="messages">
         {% for message in messages %}
-        <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+            <div class="alert alert--{{message.tags}}">
+                <p class="alert__message">{{message}}</p>
+                <button class="alert__close">⨯</button>
+            </div>
         {% endfor %}
-    </ul>
     {% endif %}
 
     {% block content %}
     
     {% endblock content %}
 
-    <p>FOOTER</p>
+    
     
 </body>
+<script src="{% static 'uikit/app.js' %}"></script>
 </html>
