fix: ajustado view createSkill

--- a/users/templates/users/skill_form.html
+++ b/users/templates/users/skill_form.html
@@ -5,8 +5,10 @@
 <h1>create skill</h1>
 
 <form method="POST">
+    {% csrf_token %}
+    
 {% for field in form %}
-
+    
     {{field.label}}
     {{field}}
 
