--- a/projects/templates/projects/projects.html
+++ b/projects/templates/projects/projects.html
@@ -51,24 +51,8 @@
         </div>
     </div>
     </section>
-    <div class="pagination">
-        <ul class="container">
-            {% if projects.has_previous %}
-            <li><a href="?page={{projects.previous_page_number}}" class="btn page-link">&#10094; Prev</a></li>
-            {% endif %}
 
-            {% for page in paginator.page_range %}
-            {% if page == projects.number %}
-            <li><a href="?page={{page}}" class="btn page-link btn--sub">{{page}}</a></li>
-            {% else %}
-            <li><a href="?page={{page}}" class="btn page-link">{{page}}</a></li>
-            {% endif %}
-            {% endfor %}
+    {% include 'pagination.html' with queryset=projects custom_range=custom_range %}
 
-            {% if projects.has_next %}
-            <li><a href="?page={{projects.next_page_number}}" class="btn page-link">Next &#10095;</a></li>
-            {% endif %}
-        </ul>
-    </div>
 </main>
 {% endblock content %}
